--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       status.textContent = "🚀 Mengirim...";
 
       try {
-        const res = await fetch("https://accessibility-acm-faq-expired.trycloudflare.com/api/kirim", {
+        const res = await fetch("https://9f95-103-142-60-11.ngrok-free.app/api/kirim", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ nomor, pesan })
